# esp32_rfc2217_gateway

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini
components/config_store/: CMakeLists.txt  config_store.c
components/config_store/include/: config_store.h
components/net_manager/: CMakeLists.txt  net_manager.c
components/net_manager/include/: net_manager.h
components/web_server/: CMakeLists.txt  web_server.c
components/web_server/include/: web_server.h
docs/: esp32_rfc2217_gateway.md  freertos_runtime.md  ser2net_mcu_overview.md
src/: CMakeLists.txt  config.json  main.c  wifi_config.h  wifi_config.h.example
tests/host/: test_http_api.py  test_rfc2217_smoke.py
